[gd_scene load_steps=16 format=3 uid="uid://cfsx87eewnw14"]

[ext_resource type="Script" path="res://Scenes/Weapons/ak_47/Bullet/Bullet_2.gd" id="1_0p0u8"]
[ext_resource type="Texture2D" uid="uid://dofk3o4qwlc1b" path="res://Assets/Objects/missile.png" id="2_5g625"]
[ext_resource type="Texture2D" uid="uid://pf08ykot5ffm" path="res://Assets/Explosions/explosion2-smal/E0000.png" id="3_rry83"]
[ext_resource type="Texture2D" uid="uid://sy6b6l52vg2f" path="res://Assets/Explosions/explosion2-smal/E0001.png" id="4_ognbc"]
[ext_resource type="Texture2D" uid="uid://c5y8gcxb622nx" path="res://Assets/Explosions/explosion2-smal/E0002.png" id="5_h6k5q"]
[ext_resource type="Texture2D" uid="uid://chc6r348jkk23" path="res://Assets/Explosions/explosion2-smal/E0003.png" id="6_mcpki"]
[ext_resource type="Texture2D" uid="uid://d35i35rnn2ksr" path="res://Assets/Explosions/explosion2-smal/E0004.png" id="7_1g4vn"]
[ext_resource type="Texture2D" uid="uid://c0btkymcw1st1" path="res://Assets/Explosions/explosion2-smal/E0005.png" id="8_lbwfe"]
[ext_resource type="Texture2D" uid="uid://dekw3bcss3p0q" path="res://Assets/Explosions/explosion2-smal/E0006.png" id="9_noe10"]
[ext_resource type="Texture2D" uid="uid://vnvvlcw0eqtq" path="res://Assets/Explosions/explosion2-smal/E0007.png" id="10_0ne6s"]
[ext_resource type="Texture2D" uid="uid://drtn6v701q3w5" path="res://Assets/Explosions/explosion2-smal/E0008.png" id="11_t3e7a"]
[ext_resource type="Texture2D" uid="uid://c83puy6sijkg0" path="res://Assets/Explosions/explosion2-smal/E0009.png" id="12_hiecp"]
[ext_resource type="AudioStream" uid="uid://cpg8ih2g5mw61" path="res://Assets/Sounds/Sfx/bullet1.wav" id="13_ea4ux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afnad"]
size = Vector2(148, 85)

[sub_resource type="SpriteFrames" id="SpriteFrames_uavgp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rry83")
}, {
"duration": 1.0,
"texture": ExtResource("4_ognbc")
}, {
"duration": 1.0,
"texture": ExtResource("5_h6k5q")
}, {
"duration": 1.0,
"texture": ExtResource("6_mcpki")
}, {
"duration": 1.0,
"texture": ExtResource("7_1g4vn")
}, {
"duration": 1.0,
"texture": ExtResource("8_lbwfe")
}, {
"duration": 1.0,
"texture": ExtResource("9_noe10")
}, {
"duration": 1.0,
"texture": ExtResource("10_0ne6s")
}, {
"duration": 1.0,
"texture": ExtResource("11_t3e7a")
}, {
"duration": 1.0,
"texture": ExtResource("12_hiecp")
}],
"loop": false,
"name": &"hit_anim",
"speed": 20.0
}]

[node name="Bullet_2" type="Area2D"]
z_index = 4
collision_layer = 16
collision_mask = 47
priority = 1
script = ExtResource("1_0p0u8")

[node name="BulletSprite" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(4.48792, 4.48792)
texture = ExtResource("2_5g625")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -1.5)
shape = SubResource("RectangleShape2D_afnad")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6, -1)
scale = Vector2(-7.22536, 3.98054)

[node name="BulletCrash" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(7, 0)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_uavgp")
animation = &"hit_anim"
frame = 4
frame_progress = 0.058924

[node name="snd_bullet_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ea4ux")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="BulletCrash" to="." method="_on_bullet_crash_animation_finished"]
